# seer_forklift_test

./: .gitignore  readme.md  setup.py
config/: sequences.yaml  settings.yaml
ros_bridge2_api/: CMakeLists.txt  Readme.md  package.xml
ros_bridge2_api/scripts/: dummy_script.py  fastAPI_client.py  fastapi_ros_bridge.py  ros_bridge_ui.html  ws_test.html
ros_bridge2_api/src/: cpp_node.cpp
scripts/: run_sequence.py  run_two_way_nav.py
scripts/pallet22/: run_test_pallet_p22_pick.py  run_test_pallet_p22_plase.py
scripts/pallet23/: run_test_pallet_p23_pick.py  run_test_pallet_p23_plase.py
seer_forklift/: api.py  exceptions.py  packer.py  tasks.py
seer_robot_interfaces/: CMakeLists.txt  Readme.md  package.xml
seer_robot_interfaces/msg/: RobotBatchData.msg
seer_robot_interfaces/srv/: AssignTask.srv  CheckCollisionNavigationPath.srv  CheckPathReservation.srv  CheckRobotAllForTask.srv  CheckRobotCurrentLocation.srv  CheckRobotNavigationTaskStatus.srv  CheckRobotStateNow.srv  GetNavigationPath.srv  NavigationParameter.srv  PathReleaseReservationByRoute.srv  PathReleaseReservationByStation.srv  PathReservation.srv  Pickpallet.srv  UpdateRobotStationForCollision.srv
seer_robot_pkg/: CMakeLists.txt  Readme.md  package.xml
seer_robot_pkg/config/: ReBoTe-CPD15.model  map.json
seer_robot_pkg/configs/: Kraiwich_Map_v.0.3.11.smap  Kraiwich_Map_v.0.3.15.smap  forklift_parameter.json  map.json  robot_params.yaml
seer_robot_pkg/launch/: full_sys.launch.py  seer_robot_01.launch.py  test_local.launch.py  test_sys.launch.py
seer_robot_pkg/scripts/: assign_task_examples.sh  map_convert.py  n_robot_controller.py  n_robot_management.py  n_robot_status.py  n_task_management.py  path_reservation.py  robot_controller.py  robot_controller_pcr.py  robot_monitor.py  robot_sim_path_planning.py  robot_state.py  robot_status.py  task_management.py  test_assign_task.py  test_pallet.py  traffic_management.py
seer_robot_pkg/seer_robot_pkg/: bn_client_api.py  bn_json_command_builder.py  bn_robot_navigation_api.py  bn_robot_status_api.py  client_api.py  collision_buildmap.py  collision_geom.py  collision_utils.py  geometry_utils.py  json_command_builder.py  map_utils.py  pallet_loader.py  robot_navigation_api.py  robot_status_api.py  simulation.py
seer_robot_pkg/src/: cpp_node.cpp
seer_robotic/: CMakeLists.txt  README_robot_state.md  package.xml
seer_robotic/config/: api_ports.yaml  robot_params.yaml
seer_robotic/launch/: multi_robot_state.launch.py  robot_state.launch.py
seer_robotic/log/: latest_list
seer_robotic/scripts/: README.md  robot_state.py
seer_robotic/scripts/backend/: __init__.py  api.py  config_manager.py  logger.py  packker.py
seer_robotic/scripts/example/: config_example.py  example_usage.py
seer_robotic/scripts/tests/: test_api_1004.py  test_api_1007.py  test_robot_state.py
seer_robotic/src/: cpp_node.cpp
seer_robotic_pkg/: .gitignore  CMakeLists.txt  package.xml
seer_robotic_pkg/config/: Kraiwich_Map_v.0.3.7.smap
seer_robotic_pkg/configs/: api_ports.yaml
seer_robotic_pkg/data/: pallet.yaml
seer_robotic_pkg/launch/: seer_robot_01.launch.py  seer_robot_02.launch.py  test_robot.launch.py
seer_robotic_pkg/scripts/: .env.example  bn_client_api.py  bn_json_command_builder.py  bn_pallet_loader.py  bn_robot_navigation_api.py  bn_robot_status_api.py  dummy_script.py  n_robot_navigation.py  n_robot_state.py  n_task_management.py  n_test_only.py  n_test_only.py.old  n_traffic_management.py  robot_navigation.py  robot_state.py  t_json_command.py  t_pallet_loader.py  ืท_task.py
seer_robotic_pkg/scripts/backend/: __init__.py  client_api.py  config_loader.py  msg_packer.py  pallet_loader.py  robot_navigation_api.py  robot_status_api.py
sequences/: pallet_and_nav.py
tests/: test_navigation.py  test_pallet_lift.py  test_sequence_executor.py
